Added a meta description

--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,8 @@
     rel="stylesheet"
   />
   <title>DecisionHub</title>
-  <meta name="description" content="" />
+  <meta name="description" content="A collaborative decision making platform 
+  for organizations to save time, remove bias, and make informed group decisions." />
   <meta name="author" content="DecisionHub" />
 </head>
 
