add doctype and update meta description and add alt field

--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -40,8 +41,8 @@
     rel="stylesheet"
   />
   <title>DecisionHub</title>
-  <meta name="description" content="A collaborative decision making platform 
-  for organizations to save time, remove bias, and make informed group decisions." />
+  <meta name="description" content="A collaborative decision making platform for organizations. 
+  The platform supports all stakeholders including admins, reviewers, and applicants for ease of use!" />
   <meta name="author" content="DecisionHub" />
 </head>
 
