google analytics setup and remove inline CSS

--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,16 @@
   <meta name="description" content="A collaborative decision making platform 
   for organizations to save time, remove bias, and make informed group decisions." />
   <meta name="author" content="DecisionHub" />
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-3LSP098KKV"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-3LSP098KKV');
+  </script>
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
