Put key behind .env

--- a/public/index.html
+++ b/public/index.html
@@ -45,12 +45,12 @@
   <meta name="author" content="DecisionHub" />
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-3LSP098KKV"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=%REACT_APP_GOOGLE_ANALYTICS_KEY%"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'G-3LSP098KKV');
+    gtag('config', "%REACT_APP_GOOGLE_ANALYTICS_KEY%");
   </script>
 </head>
 
