--- a/public/index.html
+++ b/public/index.html
@@ -46,12 +46,12 @@
   <meta name="author" content="DecisionHub" />
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=%REACT_APP_ANALYTICS_KEY%"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-NKQY0SQ263"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', "%REACT_APP_ANALYTICS_KEY%");
+    gtag('config', 'G-NKQY0SQ263');
   </script>
 </head>
 
