--- a/public/index.html
+++ b/public/index.html
@@ -15,19 +15,19 @@
     href="img/apple-touch-icon-114x114.png"
   />
 
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
   <link
     rel="stylesheet"
     type="text/css"
-    href="fonts/font-awesome/css/font-awesome.css"
+    href="fonts/font-awesome/css/font-awesome.min.css"
   />
-  <link rel="stylesheet" type="text/css" href="css/style.css" />
+  <link rel="stylesheet" type="text/css" href="css/style.min.css" />
   <link
     rel="stylesheet"
     type="text/css"
-    href="css/nivo-lightbox/nivo-lightbox.css"
+    href="css/nivo-lightbox/nivo-lightbox.min.css"
   />
-  <link rel="stylesheet" type="text/css" href="css/nivo-lightbox/default.css" />
+  <link rel="stylesheet" type="text/css" href="css/nivo-lightbox/default.min.css" />
   <link
     href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700"
     rel="stylesheet"
@@ -58,6 +58,6 @@
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
   <div id="root"></div>
-  <script type="text/javascript" src="js/jquery.1.11.1.js"></script>
-  <script type="text/javascript" src="js/bootstrap.js"></script>
+  <script type="text/javascript" src="js/jquery.1.11.1.min.js"></script>
+  <script type="text/javascript" src="js/bootstrap.min.js"></script>
 </body>
