Rebrand verbiage to application review platform

--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
   />
   <meta name="viewport" content="width=device-width, initial-scale=0.5">
   <title>DecisionHub</title>
-  <meta name="description" content="A collaborative decision making platform for organizations. 
+  <meta name="description" content="An application review platform for organizations. 
   The platform supports all stakeholders including admins, reviewers, and applicants for ease of use!" />
   <meta name="author" content="DecisionHub" />
 
