Rebrand verbiage to application review platform (#89)
* Rebrand verbiage to application review platform

* Address PR comments

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
     rel="stylesheet"
   />
   <title>DecisionHub</title>
-  <meta name="description" content="A collaborative decision making platform for organizations. 
+  <meta name="description" content="An application review platform for organizations. 
   The platform supports all stakeholders including admins, reviewers, and applicants for ease of use!" />
   <meta name="author" content="DecisionHub" />
 
