--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,11 @@
     type="text/css"
     href="css/nivo-lightbox/nivo-lightbox.min.css"
   />
-  <link rel="stylesheet" type="text/css" href="css/nivo-lightbox/default.min.css" />
+  <link
+    rel="stylesheet"
+    type="text/css"
+    href="css/nivo-lightbox/default.min.css"
+  />
   <link
     href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700"
     rel="stylesheet"
@@ -41,17 +45,31 @@
     rel="stylesheet"
   />
   <title>DecisionHub</title>
-  <meta name="description" content="An application review platform for organizations. 
-  The platform supports all stakeholders including admins, reviewers, and applicants for ease of use!" />
+  <meta
+    name="description"
+    content="An application review platform for organizations. 
+  The platform supports all stakeholders including admins, reviewers, and applicants for ease of use!"
+  />
   <meta name="author" content="DecisionHub" />
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-NKQY0SQ263"></script>
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=G-NKQY0SQ263"
+  ></script>
+  <!-- JavaScript Bundle with Popper -->
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"
+  ></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-NKQY0SQ263');
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+    gtag("config", "G-NKQY0SQ263");
   </script>
 </head>
 
