Fix navbar dropdown

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     type="text/css"
     href="fonts/font-awesome/css/font-awesome.min.css"
   />
-  <link rel="stylesheet" type="text/css" href="css/style.css" />
+  <link rel="stylesheet" type="text/css" href="css/style.min.css" />
   <link
     rel="stylesheet"
     type="text/css"
