Add hubspot tracking

--- a/public/index.html
+++ b/public/index.html
@@ -77,4 +77,7 @@
   <div id="root"></div>
   <script type="text/javascript" src="js/jquery.1.11.1.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
+  <!-- Start of HubSpot Embed Code -->
+  <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/21553264.js"></script>
+  <!-- End of HubSpot Embed Code -->
 </body>
